--- a/assets/css/admin/modules/datatables.scss
+++ b/assets/css/admin/modules/datatables.scss
@@ -9,6 +9,7 @@
   .rdt_TableCol, .rdt_TableCell {
     padding-left: 0;
     padding-right: 0;
+    min-width: auto;
   }
 
   .rdt_Pagination {
